<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".GeneralInfoActivity" ><!-- Gia to sugkekrimeno activity h sugkekrimenh othonh -->

    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/title_activity_general_info"
	    android:textColor="#FFFFFF"
	    android:textSize="20dp" />
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
        
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    xmlns:tools="http://schemas.android.com/tools"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
	    
	        <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/androidId"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
	        
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/model"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
	        
		    
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/manufacturer" 
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
		    
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/sdkVersion"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
		    
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/sendData"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
		    
	    </LinearLayout>
        
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    xmlns:tools="http://schemas.android.com/tools"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
	    
	        <TextView
	            android:id="@+id/androidId"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top|left"
	            android:textColor="#FFFFFF"
	            android:textSize="20dp" />
	        
	        <TextView
			    android:id="@+id/model"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
		    
	        <TextView
			    android:id="@+id/manufacturer"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
	        
	        <TextView
			    android:id="@+id/sdkVersion"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
	        
	        <Button
	             android:id="@+id/sendDataButton"
            	 android:layout_height="wrap_content"
			     android:layout_width="wrap_content"
			     android:layout_gravity="top|left"
			     android:textColor="#FFFFFF"
			     android:textSize="20dp" />
	        
	    </LinearLayout>
	    
	    
    </LinearLayout>

</LinearLayout>