<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".BatteryActivity" >

    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/title_activity_battery"
	    android:textColor="#FFFFFF"
	    android:textSize="20dp" />
	
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
        
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    xmlns:tools="http://schemas.android.com/tools"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
	    
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/batteryLevel"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
	        
		    
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/chargingState" 
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
		    
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:text="@string/monitoring"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
		    
	    </LinearLayout>
        
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    xmlns:tools="http://schemas.android.com/tools"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
	    
	        <TextView
			    android:id="@+id/level"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
		    
	        <TextView
			    android:id="@+id/charging"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="top|left"
			    android:textColor="#FFFFFF"
			    android:textSize="20dp" />
	        
	        <Button
	             android:id="@+id/battery_button"
            	 android:layout_height="wrap_content"
			     android:layout_width="wrap_content"
			     android:layout_gravity="top|left"
			     android:textColor="#FFFFFF"
			     android:textSize="20dp" />
	        
	    </LinearLayout>
	    
	    
    </LinearLayout>

</LinearLayout>